--- a/order/manifest.json
+++ b/order/manifest.json
@@ -4,8 +4,7 @@
   "version": "1.0",
   "manifest_version": 3,
   "action": {
-    "default_popup": "page.html",
-    "default_icon": "hello_extensions.png"
+    "default_popup": "page.html"
   },
   "permissions": ["scripting", "activeTab"]
 }
