--- a/order/manifest.json
+++ b/order/manifest.json
@@ -6,5 +6,10 @@
   "action": {
     "default_popup": "page.html"
   },
-  "permissions": ["scripting", "activeTab"]
+  "permissions": ["scripting", "activeTab"],
+  "content_scripts":[{
+    "matches":["file:///*"],
+    "js": ["raymay.js"],
+    "run_at":"document_idle"
+  }]
 }
