--- a/order/manifest.json
+++ b/order/manifest.json
@@ -7,9 +7,18 @@
     "default_popup": "page.html"
   },
   "permissions": ["scripting", "activeTab"],
-  "content_scripts":[{
-    "matches":["file:///*"],
+  "content_scripts":[
+    {
+    "matches":["file:///C:/Users/uktmb/Downloads/page/order.html"],
     "js": ["raymay.js"],
     "run_at":"document_idle"
-  }]
+    },
+    {
+      "matches":["file:///C:/Users/uktmb/Downloads/page/crown/*"],
+      "js":["crown.js"],
+      "run_at":"document_start",
+      "all_frames":true,
+      "match_about_blank": true
+    }
+  ]
 }
